// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Tenant Form Modal should render correctly when closed 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Trans(i18nKey=close)
      </Unknown>,
      <Unknown
        aria-label="Save"
        data-cy="save"
        isDisabled={true}
        onClick={[Function]}
      >
        Trans(i18nKey=save)
      </Unknown>,
    ]
  }
  appendTo={
    <body>
      <div />
    </body>
  }
  ariaDescribedById=""
  className=""
  hideTitle={false}
  isFooterLeftAligned={false}
  isLarge={false}
  isOpen={false}
  isSmall={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Trans(i18nKey=createTenant)"
>
  <Form
    onSubmit={[Function]}
  >
    <InputGroup>
      <Label>
        Trans(i18nKey=name)
      </Label>
      <ForwardRef
        aria-label="Name"
        data-cy="name"
        onChange={[Function]}
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=scheduleStartDate)
      </Label>
      <ForwardRef
        aria-label="Schedule Start Date"
        data-cy="schedule-start-date"
        onChange={[Function]}
        type="date"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=draftLength)
      </Label>
      <ForwardRef
        aria-label="Draft Length"
        data-cy="draft-length"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishNotice)
      </Label>
      <ForwardRef
        aria-label="Publish Notice"
        data-cy="publish-notice"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishLength)
      </Label>
      <ForwardRef
        aria-label="Publish Length"
        data-cy="publish-length"
        defaultValue="7"
        isDisabled={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=rotationLength)
      </Label>
      <ForwardRef
        aria-label="Rotation Length"
        data-cy="rotation-length"
        min={2}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=timezone)
      </Label>
      <TypeaheadSelectInput
        aria-label="Timezone"
        emptyText="Trans(i18nKey=selectATimezone)"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            "Timezone/1",
            "Timezone/2",
            "Timezone/3",
            "UTC",
          ]
        }
        value="UTC"
      />
    </InputGroup>
  </Form>
</Modal>
`;

exports[`New Tenant Form Modal should render correctly when opened 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Trans(i18nKey=close)
      </Unknown>,
      <Unknown
        aria-label="Save"
        data-cy="save"
        isDisabled={true}
        onClick={[Function]}
      >
        Trans(i18nKey=save)
      </Unknown>,
    ]
  }
  appendTo={
    <body>
      <div />
    </body>
  }
  ariaDescribedById=""
  className=""
  hideTitle={false}
  isFooterLeftAligned={false}
  isLarge={false}
  isOpen={true}
  isSmall={true}
  onClose={[MockFunction]}
  showClose={true}
  title="Trans(i18nKey=createTenant)"
>
  <Form
    onSubmit={[Function]}
  >
    <InputGroup>
      <Label>
        Trans(i18nKey=name)
      </Label>
      <ForwardRef
        aria-label="Name"
        data-cy="name"
        onChange={[Function]}
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=scheduleStartDate)
      </Label>
      <ForwardRef
        aria-label="Schedule Start Date"
        data-cy="schedule-start-date"
        onChange={[Function]}
        type="date"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=draftLength)
      </Label>
      <ForwardRef
        aria-label="Draft Length"
        data-cy="draft-length"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishNotice)
      </Label>
      <ForwardRef
        aria-label="Publish Notice"
        data-cy="publish-notice"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishLength)
      </Label>
      <ForwardRef
        aria-label="Publish Length"
        data-cy="publish-length"
        defaultValue="7"
        isDisabled={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=rotationLength)
      </Label>
      <ForwardRef
        aria-label="Rotation Length"
        data-cy="rotation-length"
        min={2}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=timezone)
      </Label>
      <TypeaheadSelectInput
        aria-label="Timezone"
        emptyText="Trans(i18nKey=selectATimezone)"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            "Timezone/1",
            "Timezone/2",
            "Timezone/3",
            "UTC",
          ]
        }
        value="UTC"
      />
    </InputGroup>
  </Form>
</Modal>
`;
